new section done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
@@ -14,11 +20,34 @@
   </head>
   <body>
     <header>
-      <section>
+      <section class="page1">
         <div class="header">
           <h3 class="sub-title merriweather-regular">Happy New Year</h3>
           <h1 class="text-primary merriweather-black">New Year Celebration</h1>
         </div>
+        <div class="bg"></div>
+      </section>
+      <section class="page2">
+        <h1 class="second-header inter-normal">65% OFF</h1>
+        <p class="header-description inter-small">
+          OUR HOLIDAY DEALS ARE BETTER
+        </p>
+        <h2 class="second-title inter-normal">ALL CATEGORIES</h2>
+        <img class="image-bg" src="images/New Year Photo.png" alt="" />
+      </section>
+      <section class="page3">
+        <div>
+          <h1 class="midnight-party merriweather-black">
+            Welcome to midnight party
+          </h1>
+          <p class="midnight-description inter-smaller">
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+          <a href="#" class="join inter-normal">JOIN NOW</a>
+        </div>
+        <div class="midnight-image"></div>
       </section>
     </header>
   </body>
