--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <img class="image-bg" src="images/New Year Photo.png" alt="" />
       </section>
       <section class="page3">
-        <div>
+        <div class="texts">
           <h1 class="midnight-party merriweather-black">
             Welcome to midnight party
           </h1>
@@ -47,7 +47,40 @@
           </p>
           <a href="#" class="join inter-normal">JOIN NOW</a>
         </div>
-        <div class="midnight-image"></div>
+        <div class="new-year">
+          <img src="images/Group 70.png" alt="Loading" />
+        </div>
+      </section>
+      <section class="page4">
+        <div class="fonts inter-medium">
+          <h2><span>Place:</span> New Park Hotel</h2>
+          <h2><span> Date:</span> 31 December Night 2023</h2>
+          <h2><span>Time:</span> Evening 7.30 Pm To 12.30 Am</h2>
+        </div>
+        <div class="btn">
+          <button class="inter-normal" type="button">JOIN NOW</button>
+        </div>
+      </section>
+      <section class="page5">
+        <div>
+          <h2>NEW BEST Offer</h2>
+          <h1>Coming Soon</h1>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+        </div>
+        <div>
+          <img src="images/Ellipse 1.png" alt="Loading" />
+        </div>
+        <div>
+          <h1>2024</h1>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.
+          </p>
+          <img src="images/Group 96.png" alt="Loading" />
+        </div>
       </section>
     </header>
   </body>
